test/fail/bad-actor-import3.mo
import imported1 "ic:lg264-qjkae";

//SKIP run
//SKIP run-ir
//SKIP run-low
//SKIP comp

